# vip-report-bot

./: .dockerignore  .env.example  .gitignore  .ruff.toml  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  readme.md
app/: config.py
app/bot/: bot.py  setup.py
app/bot/handlers/: commands.py  errors.py  events.py
app/bot/middlewares/: __init__.py  context.py  i18n.py  track_all_users.py
app/bot/states/: __init__.py
app/db/: __init__.py
app/db/dao/: __init__.py  admin_dao.py  base.py  employee_dao.py  point_dao.py  staff_dao.py  user_dao.py  visit_dao.py
app/db/models/: __init__.py  admin.py  base_model.py  employee.py  mixins.py  point.py  user.py  visit.py  visit_item.py  visit_item_file.py
app/dialogs/: setup.py
app/dialogs/addition_channel/: dialogs.py  getters.py  handlers.py
app/dialogs/admin/: dialogs.py  filters.py  getters.py  handlers.py  services.py
app/dialogs/calendar_dialog/: calendar_.py  dialogs.py  getters.py  handlers.py
app/dialogs/content_plan/: calendar_.py  services.py
app/dialogs/creating_post/: dialogs.py  getters.py  handlers.py  services.py
app/dialogs/customer_user/: constants.py  dialogs.py  getters.py  handlers.py  keyboards.py  services.py
app/dialogs/manager/: dialogs.py  getters.py
app/dialogs/settings/: dialogs.py  getters.py  handlers.py
app/dialogs/user/: dialogs.py  filters.py  getters.py  services.py
app/dialogs/waiter/: constants.py  dialogs.py  (+4 more)
app/locales/: i18n_format.py  stub.pyi
app/migrations/: env.py
app/utils/: __init__.py  i18n.py  nats_connect.py  prestart.py
(+24 files in other folders)
