[project]
name = "vip-report-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexey Yumanov",email = "inactive0073@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "aiogram-dialog (>=2.4.0,<3.0.0)",
    "aiogram (>=3.22.0,<4.0.0)",
    "ruff (>=0.12.12,<0.13.0)",
    "environs (>=14.3.0,<15.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "fluentogram[cli] (>=1.2.1,<2.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "fluent-runtime (>=0.4.0,<0.5.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
